--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
+    "lucide-react": "^0.456.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
