--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.2.4",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "framer-motion": "^11.15.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "lucide-react": "^0.456.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
-    "react": "^18.0.0",
-    "lucide-react": "^0.456.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
