--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "@chakra-ui/react": "^3.2.4",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@types/react-slick": "^0.23.13",
     "lucide-react": "^0.456.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "structured-clone": "^0.2.2"
   },
   "devDependencies": {
