--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "nestjs-pino": "^4.2.0",
+    "pino-http": "^10.4.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -45,6 +47,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.0.0",
     "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
