--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint, eslint .",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "prepare": "[ -n \"$CI\" ] || husky install"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
@@ -46,7 +45,6 @@
     "lint-staged": "^15.3.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
